# SPDX-License-Identifier: MIT OR Apache-2.0
#
# The cargo-fuzz harness for ironauth-store's redirect-URI comparator (issue #13).
# Deliberately NOT a workspace member (the empty [workspace] table below detaches
# it): its libFuzzer dependency needs a nightly toolchain and must not constrain
# the stable workspace or enter the cargo-deny graph, mirroring ironauth-jose's
# fuzz/, ironauth-fetch's fuzz/, the root fuzz/ crate, and the sibling Iron
# projects. The scheduled CI lane that runs this target lives in
# .github/workflows/fuzz.yml. The same input space also has stable, in-CI
# coverage in the crate's redirect.rs unit tests (the CVE regression corpus and
# the loopback-exception cases).
[package]
name = "ironauth-store-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
ironauth-store = { path = ".." }

[[bin]]
name = "redirect_match"
path = "fuzz_targets/redirect_match.rs"
test = false
doc = false
bench = false

[[bin]]
name = "canonicalize_identifier"
path = "fuzz_targets/canonicalize_identifier.rs"
test = false
doc = false
bench = false
